# HW1---Signal-Frequency-Extraction

./: .env-example  .gitignore  CITATION.cff  LICENSE  README.md  capture_dash.py  capture_next_screenshots.py  capture_screenshots.py  capture_terminal.py  count_lines.py  how --stat  pyproject.toml
assets/: sliders.css  style.css
config/: logging_config.json  rate_limits.json  setup.json
data/: dataset.npz
docs/: AUDIT.md  PLAN.md  PRD.md  PRD_models.md  PRD_signal_generation.md  PRD_training.md  PROMPTS.md  TODO.md
results/checkpoints/: lstm_best.pt  mlp_best.pt  rnn_best.pt
src/: main.py
src/freq_extractor/: __init__.py  constants.py
src/freq_extractor/assets/: sliders.css  style.css
src/freq_extractor/sdk/: __init__.py  sdk.py  sdk_base.py  sdk_runner.py  sdk_runner_plots.py  sdk_train_eval.py
src/freq_extractor/services/: __init__.py  datasets.py  (+24 more)
tests/: conftest.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_checkpoint.py  test_config.py  test_config_logging.py  test_config_rate_limits.py  test_config_setup.py  test_data_pipeline.py  test_data_transforms.py  test_dataset_builder.py  test_datasets.py  test_documentation_quality.py  test_eval_robustness.py  test_evaluation.py  test_gatekeeper.py  test_lstm_model.py  test_mlp_model.py  test_model_factory.py  test_plots.py  test_rnn_model.py  test_sdk.py  test_signal_generator.py  test_training.py  test_training_helpers.py  test_ui_analysis.py  test_ui_callbacks.py  test_ui_dimred_math.py  test_ui_service.py  test_ui_signal_callback_helpers.py  test_version.py
(+6 files in other folders)
